2008-01-13  Bruno Haible  <bruno@clisp.org>

	* makemake.in: Don't use $(MAKE) -C.

2008-01-13  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (STACK_start): declare new per_thread
	* spvw.d (STACK_start): create and ...
	(init_memory): init to the initial value of STACK
	* spvw_debug.d (nobject_out1): use STACK_start to print
	framepointers and framepointerp to check for them
	* io.d (pr_framepointer_1): new function: print frame offset from
	STACK_start instead of its address
	(pr_framepointer): use it instead of pr_hex6

2008-01-13  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (per_thread): per-thread storage class
	* spvw.d, lispbibl.d (STACK, callback_saved_registers)
	(saved_mv_count, saved_value1, saved_back_trace, saved_STACK)
	(SP_bound, STACK_bound, mv_count, mv_space, temp_mv_count)
	(temp_value1, back_trace, aktenv, unwind_protect_to_save)
	(handler_args, inactive_handlers): use per-thread instead of
	current_thread() fields

2008-01-12  Sam Steingold  <sds@gnu.org>

	* makemake.in: use add traling #\/ to gllib in "find" so that
	gllib can be a symlink

2008-01-12  Sam Steingold  <sds@gnu.org>

	* xthread.d: disable spin locks (gcc barfs)
	* constsym.d, subr.d, subrkw.d, threads.lisp, zthread.d:
	rename thread functions from PROCESS to THREAD
	* lispbibl.d (Rectype_Thread, Rectype_Mutex, Rectype_Exemption)
	[MULTITHREAD]: add Rectypes
	(Thread, Mutex, Exemption) [MULTITHREAD]: add types
	(TheThread, TheMutex, TheExemption) [MULTITHREAD]: add macros
	(allocate_thread, allocate_mutex, allocate_exemption)
	[MULTITHREAD]: add declarations
	* spvw_typealloc.d (allocate_thread, allocate_mutex)
	(allocate_exemption) [MULTITHREAD]: add
	* io.d (pr_orecord) [MULTITHREAD]: handle Rectype_Thread,
	Rectype_Mutex, and Rectype_Exemption
	* constobj.d (printstring_thread, printstring_mutex)
	(printstring_exemption) [MULTITHREAD]: add strings

2008-01-10  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (frame-up-down): add
	(print-backtrace, break-loop, step-hook-fn): use it