@@ -1,5 +1,10 @@
 2008-01-13  Bruno Haible  <bruno@clisp.org>
 
+	* spvw_memfile.d (loadmem_from_handle) [SPVW_MIXED_BLOCKS_OPPOSITE]:
+	Fix the test whether there's enough room.
+
+2008-01-13  Bruno Haible  <bruno@clisp.org>
+
 	* makemake.in: Don't use $(MAKE) -C.
 
 2008-01-13  Sam Steingold  <sds@gnu.org>
